<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_area">Search for Area</string>
    <string name="search">Search</string>
    <string name="error_message">Error Message: </string>
    <string name="try_again">Try Again</string>
    <string name="remember_spelling_is_important">Remember spelling is important.</string>
    <string name="error_code">Error Code: </string>
    <string name="mini_temp">Mini Temp: %s°C </string>
    <string name="max_temp">Max Temp: %s°C</string>
    <string name="more_information">More Information</string>
    <string name="city_code">Success Code: </string>
    <string name="humidity">Humidity: </string>
    <string name="pressure">Pressure: </string>
    <string name="tempeture">Tempeture </string>
    <string name="feels_like">Feels Like: %s°C </string>
    <string name="sunrise">Sunrise: </string>
    <string name="wind">Wind </string>
    <string name="speed">Speed: %sm/s</string>
    <string name="weather">Weather: </string>
    <string name="sunset">Sunset: </string>
    <string name="timezone">Timezone: </string>
    <string name="gust">Gust: %sm/s </string>
    <string name="degree">Degree:%s° </string>
    <string name="longitude">Longitude: %s</string>
    <string name="latitude">Latitude: %s</string>
</resources>